footer alignment corrected

--- a/src/App.css
+++ b/src/App.css
@@ -447,6 +447,7 @@ li {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  align-content: center;
   gap: 1rem;
   background-color: rgba(61, 61, 61, 0.95);
   width: 100%;
@@ -460,12 +461,25 @@ li {
   gap: 1rem;
 }
 .contactDetails {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0px 100px 0 100px;
-}
+  border: 2px solid green;
+  min-width: 280px;}
+
+  .contactDetailsAfter {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 100px 0 100px;
+    border: 2px solid green;
+    width: 100%;
+  }
 .logo {
   width: 100px;
 }
